--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-
+/* @import url("https://fonts.googleapis.com/css2?family=Bitcount+Single:wght@100..900&family=Comfortaa:wght@300..700&family=Fasthand&display=swap"); */
 @layer base {
   :root {
     --background: #ffffff;
@@ -44,4 +44,11 @@
 button,
 a {
   cursor: pointer;
+}
+
+/* googlefont */
+.fasthand-regular {
+  font-family: "Fasthand", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
